--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-/.env
-*.db
-*.sqbpro
-/summaries/*
-/news_weather_summaries.jsonl
-
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/.gitignore
@@ -11,3 +5,10 @@
 
 /notebook.ipynb
 /PyCharmMiscProject.iml
+
+/.env
+*.db
+*.sqbpro
+/summaries/*
+/news_weather_summaries.jsonl
+/pp/pp_config.json
